[package]
name = "string_literal"
version = "0.1.1"
edition = "2021"
description = "A simple macro that auto insert `.to_string()` call to str literal."
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true



[dependencies]
quote = "1"
syn = {version = "1", features = ["full","visit-mut"]}
